<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/g"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="77dp"
        android:text="@string/g"
        android:textSize="60sp"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="77dp"
        android:text="@string/o"
        android:layout_alignBottom="@+id/g"
        android:textColor="@color/pink"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/o1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="77dp"
        android:text="@string/o"
        android:layout_alignBottom="@+id/g"
        android:textColor="@color/yellow"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/g1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="206dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="77dp"
        android:text="@string/g1"
        android:layout_alignBottom="@+id/g"
        android:textColor="@color/blue"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="233dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="77dp"
        android:text="@string/l"
        android:layout_alignBottom="@+id/g"
        android:textColor="@color/green"
        android:textSize="60sp" />
    <TextView
        android:id="@+id/e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="242dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="77dp"
        android:text="@string/e"
        android:layout_alignBottom="@+id/g"
        android:textColor="@color/pink"
        android:textSize="60sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="190dp"
        android:layout_marginRight="112dp"
        android:text="@string/con"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="222dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="277dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/uname"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_alignStart="@+id/uname"
        android:layout_alignLeft="@+id/uname"
        android:background="@drawable/edit_text_border"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        android:id="@+id/username"
        android:padding="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="222dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="380dp"
        android:layout_marginRight="277dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/pass"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="410dp"
        android:layout_alignStart="@+id/pass"
        android:layout_alignLeft="@+id/pass"
        android:background="@drawable/edit_text_border"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:padding="10dp"/>

    <CheckBox
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="266dp"
        android:id="@+id/checkbox"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/kml"
        android:textSize="20sp" />
   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="300dp"
       android:layout_height="60dp"
       android:layout_marginTop="530dp"
       android:layout_centerHorizontal="true"
       android:background="@drawable/button_border"
       android:id="@+id/btn"
       android:text="@string/sign"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/account"
    android:layout_marginTop="600dp"
    android:layout_centerHorizontal="true"
    android:textSize="20sp"
    android:textColor="@color/blue"/>

</RelativeLayout>